D&S HW 2 Docker & Simple Sort Table

--- a/app/public/userinfo.html
+++ b/app/public/userinfo.html
@@ -9,16 +9,16 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 
-    <title>Home Page</title>
+    <title>User Information</title>
   </head>
   <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="index.html">On-The-Line Books</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+  <a class="navbar-brand" href="index.html">On-The-Line Books</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
@@ -34,54 +34,15 @@
     </ul>
   </div>
 </nav>
-
-    <h1>Welcome to On-The-Line Books!</h1>
-
-    <h3>Popular Books We Recommend for You</h3>
-
-    <br>
-
-  <div class="container">
-    <div class="image1">
-      <a target="_blank" href="img/Age_Of_Crypto.jpg">
-        <img src="img/Age_Of_Crypto.jpg" alt="Age of Crypto">
-      </a>
-      <p><cite>The Age of Cryptocurrency</cite></p>
+  <div class="card">
+    <h1>View Your Profile</h1>
+      <img src="img/Keith.jpg" alt="Keith" class="user">
+      <h2>Keith Boyd</h2>
+      <p class="country">United States</p>
+      <p class="birthdate">July 1, 1985</p>
+      <p class="age">Age 37</p>
+      <a id="useremail" href="mailto:keith_boyd@gmail.com">keith_boyd@gmail.com</a>
     </div>
-
-    <div class="image2">
-      <a target="_blank" href="img/Option_Vol.jpg">
-        <img src="img/Option_Vol.jpg" alt="Option Volatility and Pricing">
-      </a>
-      <p><cite>Option Pricing and Volatility</cite></p>
-    </div>
-
-    <div class="image3">
-      <a target="_blank" href="img/Return_Depression.jpg">
-        <img src="img/Return_Depression.jpg" alt="Return of Depression Economics">
-      </a>
-      <p><cite>The Return of Depression Economics</cite></p>
-    </div>
-
-    <div class="image4">
-      <a target="_blank" href="img/Subtle_Art.jpg">
-        <img src="img/Subtle_Art.jpg" alt="The Subtle Art">
-      </a>
-      <p><cite>The Subtle Art of Not Giving a F*ck</cite></p>
-    </div>
-
-    <div class="image5">
-      <a target="_blank" href="img/Why_Nations_Fail.jpg">
-        <img src="img/Why_Nations_Fail.jpg" alt="Why Nations Fail">
-      </a>
-      <p><cite>Why Nations Fail</cite></p>
-    </div>
-
-  </div>
-
-    <form action="booktables.html">
-      <input type="submit" class="btn btn-primary" value="View More Books">
-    </form>
 
     <footer>
       <p>On-The-Line Books</p>
@@ -94,6 +55,5 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    
   </body>
 </html>
