--- a/app/public/userinfo.html
+++ b/app/public/userinfo.html
@@ -44,6 +44,16 @@
       <a id="useremail" href="mailto:keith_boyd@gmail.com">keith_boyd@gmail.com</a>
     </div>
 
+    <div id="app">
+      <p>{{ message }}</p>
+      <button v-on:click="reverseMessage">Reverse Message</button>
+
+      <!-- <div class="randomUser" v-for="user in userList">
+        <span class="fullName">{{ user[0].name.first }} </span>
+      </div> -->
+
+    </div>
+
     <footer>
       <p>On-The-Line Books</p>
       <p>12345 Bookslane Dr Bloomington, IN 47404</p>
@@ -55,5 +65,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="js/userinfo.app.js"></script>
   </body>
 </html>
