--- a/app/public/userinfo.html
+++ b/app/public/userinfo.html
@@ -48,9 +48,9 @@
       <p>{{ message }}</p>
       <button v-on:click="reverseMessage">Reverse Message</button>
 
-      <!-- <div class="randomUser" v-for="user in userList">
-        <span class="fullName">{{ user[0].name.first }} </span>
-      </div> -->
+      <div class="randomUser" v-for="user in userList">
+        <span class="fullName">{{ user[0] }} </span>
+      </div>
 
     </div>
 
