--- a/app/public/userinfo.html
+++ b/app/public/userinfo.html
@@ -34,26 +34,23 @@
     </ul>
   </div>
 </nav>
-  <div class="card">
+  <div id="app" class="card">
+
     <h1>View Your Profile</h1>
-      <img src="img/Keith.jpg" alt="Keith" class="user">
-      <h2>Keith Boyd</h2>
-      <p class="country">United States</p>
-      <p class="birthdate">July 1, 1985</p>
-      <p class="age">Age 37</p>
-      <a id="useremail" href="mailto:keith_boyd@gmail.com">keith_boyd@gmail.com</a>
-    </div>
+    <a v-bind:href="userImgLarge">
+      <img v-bind:src="userImgThumb" class="user">
+    </a>
+      <h2>{{ userName}}</h2>
+      <p class="country">{{ userCountry }}</p>
+      <p class="birthdate">{{ formatDate(userDOB) }}</p>
+      <p class="age">Age {{ userAge }}</p>
+      <a id="useremail" v-bind:href="'mailto:' + userEmail"> {{ userEmail }} </a>
 
-    <div id="app">
-      <p>{{ message }}</p>
-      <button v-on:click="reverseMessage">Reverse Message</button>
-
-      <div class="randomUser" v-for="user in userList">
-        <span class="fullName">{{ user[0] }} </span>
-      </div>
+      <!-- <p>{{ message }}</p>
+      <button v-on:click="reverseMessage">Reverse Message</button> -->
 
     </div>
-
+    
     <footer>
       <p>On-The-Line Books</p>
       <p>12345 Bookslane Dr Bloomington, IN 47404</p>
@@ -61,11 +58,14 @@
     </footer>
 
     <!-- Optional JavaScript -->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.28.0/moment.min.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="js/userinfo.app.js"></script>
+    <script src="js/moment.app.js"></script>
   </body>
 </html>
