--- a/app/public/table.html
+++ b/app/public/table.html
@@ -37,115 +37,31 @@
 
     <h1>List of Books We Have</h1>
 
-    <table id="bookTable" class="table">
+    <table id="commentTable" class="table">
       <thead>
         <tr>
-          <th>Title</th>
-          <th>Author(s)</th>
-          <th>Year Published</th>
-          <th>Publisher</th>
-          <th>Page Count</th>
-          <th>MSRP</th>
+          <th>ID</th>
+          <th>Comment</th>
         </tr>
       </thead>
-      <tbody>
+      <tbody id="commentTableBody">
         <tr>
-          <td>The Age of Cryptocurrency</td>
-          <td>Paul Vigna, Michael Casey</td>
-          <td>2015</td>
-          <td>Picador</td>
-          <td>357 pages</td>
-          <td>$15.65</td>
-        </tr>
-        <tr>
-          <td>Options Pricing and Volatility</td>
-          <td>Sheldon Natenberg</td>
-          <td>1988</td>
-          <td>McGraw Hill Professional</td>
-          <td>592 pages</td>
-          <td>$76.59</td>
-        </tr>
-        <tr>
-          <td>The Return of Depression Economicsy</td>
-          <td>Paul Krugman</td>
-          <td>2008</td>
-          <td>W. W. Norton & Company</td>
-          <td>214 pages</td>
-          <td>$14.50</td>
-        </tr>
-        <tr>
-          <td>The Subtle Art of Not Giving a F*ck</td>
-          <td>Mark Manson</td>
-          <td>2016</td>
-          <td>HarperOne</td>
-          <td>224 pages</td>
-          <td>$15.89</td>
-        </tr>
-        <tr>
-          <td>Think Big, Act Small</td>
-          <td>Jason Jennings</td>
-          <td>2005</td>
-          <td>Penguin Publishing Group</td>
-          <td>288 pages</td>
-          <td>$13.70</td>
-        </tr>
-        <tr>
-          <td>Why Nations Fail</td>
-          <td>Daron Acemoglu, James A. Robinson</td>
-          <td>2012</td>
-          <td>Crown Publishing Group</td>
-          <td>546 pages</td>
-          <td>$14.50</td>
-        </tr>
-        <tr>
-          <td>The Truth Machine: The Blockchain and The Future of Everything</td>
-          <td>Paul Vigna, Michael Casey</td>
-          <td>2018</td>
-          <td>St. Martin's Publishing Group</td>
-          <td>352 pages</td>
-          <td>$17.32</td>
-        </tr>
-        <tr>
-          <td>Too Big to Fail</td>
-          <td>Andrew Ross Sorkin</td>
-          <td>2009</td>
-          <td>Viking Press</td>
-          <td>624 pages</td>
-          <td>$27.89</td>
+          <td>1</td>
+          <td>I have something important to say</td>
         </tr>
       </tbody>
     </table>
 
     <br>
     <div class="container">
-      <form role="form">
-        <h3>Feel Free to Add a Book to your Prferences</h3>
+      <form role="form" id="newCommentForm">
+        <h3>Submit New Comment</h3>
         <br>
           <div class="form-group">
-              <label for="title">Book Title</label>
-              <input type="text" id="title" class="form-control" name="title" placeholder="Book Title"><br>
+            <label for="author">Comment</label>
+            <input type="textarea" id="comment" name="comment" class="form-control" placeholder="Comment"><br>
           </div>
-          <div class="form-group">
-            <label for="author">Author(s)</label>
-            <input type="text" id="author" name="author" class="form-control" placeholder="Author(s)"><br>
-          </div>
-          <div class="form-group">
-            <label for="year_published">Year Published</label>
-            <input type="text" id="year_published" class="form-control" name="year_published"><br>
-          </div>
-          <div class="form-group">
-            <label for="publisher">Publisher</label>
-            <input type="text" id="publisher" class="form-control" name="publisher"><br>
-          </div>
-          <div class="form-group">
-            <label for="pages">Number of Pages</label>
-            <input type="number" id="pages" class="form-control" name="pages"><br>
-          </div>
-          <div class="form-group">
-            <label for="msrp">Suggested Retail Price</label>
-            <input type="number" min="0.01" step="0.01" max="2500" id="msrp" class="form-control" name="msrp"><br>
-          </div>
-        <button type="submit" form="book_form" value="Submit" class="btn btn-primary">Add Book to List</button>
+        <button type="submit" form="book_form" value="Submit" class="btn btn-primary" id="submitNewComment">Add New Comment</button>
       </form>
     </div>
 
@@ -165,7 +81,7 @@
     <script src="js/tablesort.min.js"></script>
     <script>
     /**Tablesort plugin from http://tristen.ca/tablesort/demo/**/
-    
+
   new Tablesort(document.getElementById('bookTable'));
 </script>
   </body>
