--- a/app/public/table.html
+++ b/app/public/table.html
@@ -11,7 +11,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/styles.css">
 
-    <title>Table of Books</title>
+    <title>Table of Comments</title>
   </head>
   <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -29,41 +29,41 @@
         <a class="nav-link" href="userinfo.html">User Information</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="table.html">Table of Books</a>
+        <a class="nav-link" href="table.html">Table of Comments</a>
       </li>
     </ul>
   </div>
 </nav>
 
-    <h1>List of Books We Have</h1>
-
-    <table id="commentTable" class="table">
-      <thead>
-        <tr>
-          <th>ID</th>
-          <th>Comment</th>
-        </tr>
-      </thead>
-      <tbody id="commentTableBody">
-        <tr>
-          <td>1</td>
-          <td>I have something important to say</td>
-        </tr>
-      </tbody>
-    </table>
-
+    <h1>List of Comments</h1>
+    <div id="commentInfo">
+        <table id="commentTable" class="table">
+          <thead>
+            <tr>
+              <th>ID</th>
+              <th>Comment</th>
+            </tr>
+          </thead>
+          <tbody id="commentTableBody">
+            <tr v-for="comment in commentList">
+              <td>{{ comment.id }}</td>
+              <td>{{ comment.commentText }}</td>
+            </tr>
+          </tbody>
+        </table>
     <br>
     <div class="container">
-      <form role="form" id="newCommentForm">
+      <form v-on:submit.prevent="handleNewCommentForm" method="post" role="form" id="newCommentForm" >
         <h3>Submit New Comment</h3>
         <br>
           <div class="form-group">
-            <label for="author">Comment</label>
-            <input type="textarea" id="comment" name="comment" class="form-control" placeholder="Comment"><br>
+            <label for="comment">Comment</label>
+            <input type="textarea" v-model="newCommentForm.commentText" id="commentText" name="comment" class="form-control" placeholder="Comment"><br>
           </div>
-        <button type="submit" form="book_form" value="Submit" class="btn btn-primary" id="submitNewComment">Add New Comment</button>
+        <button type="submit" id="submitNewComment" form="comment_form" value="Submit" class="btn btn-primary">Add New Comment</button>
       </form>
     </div>
+  </div>
 
 
 
@@ -78,11 +78,13 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="js/commentinfo.app.js"></script>
     <script src="js/tablesort.min.js"></script>
     <script>
     /**Tablesort plugin from http://tristen.ca/tablesort/demo/**/
 
-  new Tablesort(document.getElementById('bookTable'));
+  // new Tablesort(document.getElementById('bookTable'));
 </script>
   </body>
 </html>
