--- a/app/public/userinfo.html
+++ b/app/public/userinfo.html
@@ -29,7 +29,7 @@
         <a class="nav-link" href="userinfo.html">User Information</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="table.html">Table of Books</a>
+        <a class="nav-link" href="table.html">Table of Comments</a>
       </li>
     </ul>
   </div>
