IDEK messing around

--- a/app/public/table.html
+++ b/app/public/table.html
@@ -53,7 +53,7 @@
         </table>
     <br>
     <div class="container">
-      <form v-on:submit.prevent="handleNewCommentForm" method="post" role="form" id="newCommentForm" >
+      <form v-on:submit.prevent="creatNewComment()" method="post" role="form" id="newCommentForm" >
         <h3>Submit New Comment</h3>
         <br>
           <div class="form-group">
