--- a/app/public/table.html
+++ b/app/public/table.html
@@ -57,7 +57,7 @@
         <h3>Submit New Comment</h3>
         <br>
           <div class="form-group">
-            <label for="comment">Comment</label>
+            <label for="commentText">Comment</label>
             <input type="textarea" v-model="newCommentForm.commentText" id="commentText" name="comment" class="form-control" placeholder="Comment"><br>
           </div>
         <button type="submit" id="submitNewComment" form="comment_form" value="Submit" class="btn btn-primary">Add New Comment</button>
